@@ -1,6 +1,8 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
+          - improve performance by checking for duplicates by comparing the
+            checksum of a schema rather than the content itself
 
 0.578     2023-12-29 23:13:44Z
           - remove use of JSON::MaybeXS, to avoid potential use of JSON::XS;
